--- a/examples/todo/package.json
+++ b/examples/todo/package.json
@@ -24,6 +24,7 @@
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "verify": "npm pack && tar xf loopback-todo*.tgz && tree package && npm run clean",
     "migrate": "node ./dist/migrate",
+    "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "npm run build",
     "start": "node ."
   },
@@ -54,10 +55,12 @@
     "@loopback/eslint-config": "^7.0.1",
     "@loopback/http-caching-proxy": "^2.1.5",
     "@loopback/testlab": "^3.1.5",
+    "@types/js-yaml": "^3.12.4",
     "@types/lodash": "^4.14.152",
     "@types/morgan": "^1.9.0",
     "@types/node": "^10.17.24",
     "eslint": "^7.0.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "typescript": "~3.9.3"
   },
